# nexlet-git

./: .gitignore  NEW.md  PEOPLE.md  README.md  new_file12.txt  new_file4.txt  new_file9.txt  pyproject.toml  scratch.py  test.txt
